<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/backcard"
    android:orientation="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="3dp" >

        <ImageView
            android:id="@+id/bDragon"
            android:layout_width="73dp"
            android:layout_height="98dp"
            android:scaleType="fitCenter"
            android:src="@drawable/dragon"
            android:tag="dragon" />

        <ImageView
            android:id="@+id/bPhoenix"
            android:layout_width="73dp"
            android:layout_height="98dp"
            android:scaleType="fitCenter"
            android:src="@drawable/phoenix"
            android:tag="phoenix" />

        <ImageView
            android:id="@+id/bMahjongg"
            android:layout_width="73dp"
            android:layout_height="98dp"
            android:scaleType="fitCenter"
            android:src="@drawable/mahjongg"
            android:tag="mahjongg" />

        <ImageView
            android:id="@+id/bDogs"
            android:layout_width="73dp"
            android:layout_height="98dp"
            android:scaleType="fitCenter"
            android:src="@drawable/dogs"
            android:tag="dogs" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="3dp" >

        <ImageView
            android:id="@+id/bAce"
            android:layout_width="73dp"
            android:layout_height="98dp"
            android:scaleType="fitCenter"
            android:src="@drawable/statsace"
            android:tag="ace" />

        <ImageView
            android:id="@+id/bKing"
            android:layout_width="73dp"
            android:layout_height="98dp"
            android:scaleType="fitCenter"
            android:src="@drawable/statsking"
            android:tag="king" />

        <ImageView
            android:id="@+id/bQueen"
            android:layout_width="73dp"
            android:layout_height="98dp"
            android:scaleType="fitCenter"
            android:src="@drawable/statsqueen"
            android:tag="queen" />

        <ImageView
            android:id="@+id/bJack"
            android:layout_width="73dp"
            android:layout_height="98dp"
            android:scaleType="fitCenter"
            android:src="@drawable/statsjack"
            android:tag="jack" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#333333"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="3dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cardStats"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#333333"
        android:orientation="horizontal"
        android:padding="3dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingRight="3dp"
            android:text="@string/cardsRemaining"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/ivCard1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:src="@drawable/snull"/>

        <ImageView
            android:id="@+id/ivCard2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:src="@drawable/snull"/>

        <ImageView
            android:id="@+id/ivCard3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:src="@drawable/snull" />

        <ImageView
            android:id="@+id/ivCard4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:src="@drawable/snull"/>
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3dp" >

        <Button
            android:id="@+id/bRemove"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/removeButton"
            android:textSize="20dp" />
    </LinearLayout>

</LinearLayout>