<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/backcard"
    android:orientation="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="3dp" >

        <ImageView
            android:id="@+id/b10T2"
            android:layout_width="73dp"
            android:layout_height="98dp"
            android:scaleType="fitCenter"
            android:src="@drawable/stats10"
            android:tag="10" />

        <ImageView
            android:id="@+id/b9T2"
            android:layout_width="73dp"
            android:layout_height="98dp"
            android:scaleType="fitCenter"
            android:src="@drawable/stats9"
            android:tag="9" />

        <ImageView
            android:id="@+id/b8T2"
            android:layout_width="73dp"
            android:layout_height="98dp"
            android:scaleType="fitCenter"
            android:src="@drawable/stats8"
            android:tag="8" />

        <ImageView
            android:id="@+id/b7T2"
            android:layout_width="73dp"
            android:layout_height="98dp"
            android:scaleType="fitCenter"
            android:src="@drawable/stats7"
            android:tag="7" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="11dp"
        android:paddingTop="10dp" >

        <ImageView
            android:id="@+id/b6T2"
            android:layout_width="58dp"
            android:layout_height="83dp"
            android:scaleType="fitCenter"
            android:src="@drawable/stats6"
            android:tag="6" />

        <ImageView
            android:id="@+id/b5T2"
            android:layout_width="58dp"
            android:layout_height="83dp"
            android:scaleType="fitCenter"
            android:src="@drawable/stats5"
            android:tag="5" />

        <ImageView
            android:id="@+id/b4T2"
            android:layout_width="58dp"
            android:layout_height="83dp"
            android:scaleType="fitCenter"
            android:src="@drawable/stats4"
            android:tag="4" />

        <ImageView
            android:id="@+id/b3T2"
            android:layout_width="58dp"
            android:layout_height="83dp"
            android:scaleType="fitCenter"
            android:src="@drawable/stats3"
            android:tag="3" />

        <ImageView
            android:id="@+id/b2T2"
            android:layout_width="58dp"
            android:layout_height="83dp"
            android:scaleType="fitCenter"
            android:src="@drawable/stats2"
            android:tag="2" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#333333"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="3dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cardStats"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#333333"
        android:orientation="horizontal"
        android:padding="3dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingRight="3dp"
            android:text="@string/cardsRemaining"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/ivCard1T2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:src="@drawable/snull" />

        <ImageView
            android:id="@+id/ivCard2T2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:src="@drawable/snull" />

        <ImageView
            android:id="@+id/ivCard3T2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:src="@drawable/snull" />

        <ImageView
            android:id="@+id/ivCard4T2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:src="@drawable/snull" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3dp" >

        <Button
            android:id="@+id/bRemoveT2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/removeButton"
            android:textSize="20dp" />
    </LinearLayout>

</LinearLayout>